--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Description"
+        content="This site is about Audrey Franco and her different code projects that she's worked on">
     <link rel="stylesheet" href="/css/style.css" />
     <title>About Audrey Franco</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Audrey Franco</a>
+            <a class="navbar-brand" href="/">Audrey Franco</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About me</a>
+                        <a class="nav-link active" href="/about.html">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html#contact">Contact Me</a>
+                        <a class="nav-link" href="/about.html#contact">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -50,13 +52,13 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
-                <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+                <img src="/images/yoga.png" alt="Yoga" class="img-fluid p-2 shadow rounded" />
             </div>
             <div class="col-sm-4">
-                <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+                <img src="/images/weather.png" alt="weather" class="img-fluid p-2 shadow rounded" />
             </div>
             <div class="col-sm-4">
-                <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+                <img src="/images/yogurt.png" alt="Yogurt" class="img-fluid p-2 shadow rounded" />
             </div>
         </div>
     </div>
