--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Description" content="This site is about Audrey Franco and her different code projects that she's worked on">
     <title>Audrey Franco</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Audrey Franco</a>
+            <a class="navbar-brand" href="/">Audrey Franco</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -43,13 +44,13 @@
         😀 Front-end developer, based in Los Angeles, CA, USA
     </h3>
     <div class="navigation-links">
-        <a href="about.html#contact" class="contact-link">Contact me</a>
-        <a href="about.html" class="about-link">About me</a>
+        <a href="/about.html#contact" class="contact-link">Contact me</a>
+        <a href="/about.html" class="about-link">About me</a>
     </div>
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <img src="images/yoga.png" class="img-fluid rounded" />
+                <img src="/images/yoga.png" alt="Yoga" class="img-fluid rounded" />
             </div>
             <div class="col-sm-6">
                 <h2 class="text-start mt-3">Yoga app</h2>
@@ -78,12 +79,12 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <img src="images/weather.png" class="img-fluid rounded" />
+                <img src="/images/weather.png" alt="Weather" class="img-fluid rounded" />
             </div>
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <img src="images/yogurt.png" class="img-fluid rounded" />
+                <img src="/images/yogurt.png" alt= "Yogurt" class="img-fluid rounded" />
             </div>
             <div class="col-sm-6">
                 <h2 class="text-start mt-3">Yogurt app</h2>
