--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Audrey Franco</a>
+            <a class="navbar-brand" href="/" title="Homepage">Audrey Franco</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/" title="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/about.html">About me</a>
+                        <a class="nav-link active" href="/about.html" title="About Audrey Franco">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html#contact">Contact Me</a>
+                        <a class="nav-link" href="/about.html#contact" title="Contact Audrey Franco">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -52,13 +52,13 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
-                <img src="/images/yoga.png" alt="Yoga" class="img-fluid p-2 shadow rounded" />
+                <img src="/images/yoga.png" alt="Yoga" class="img-fluid p-2 mb-4 shadow rounded" />
             </div>
             <div class="col-sm-4">
-                <img src="/images/weather.png" alt="weather" class="img-fluid p-2 shadow rounded" />
+                <img src="/images/weather.png" alt="weather" class="img-fluid p-2 mb-4 shadow rounded" />
             </div>
             <div class="col-sm-4">
-                <img src="/images/yogurt.png" alt="Yogurt" class="img-fluid p-2 shadow rounded" />
+                <img src="/images/yogurt.png" alt="Yogurt" class="img-fluid p-2 mb-4 shadow rounded" />
             </div>
         </div>
     </div>
