--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Audrey Franco</a>
+            <a class="navbar-brand" href="/" title="zHomepage">Audrey Franco</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About me</a>
+                        <a class="nav-link" href="/about.html" title="About Audrey Franco">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html#contact">Contact Me</a>
+                        <a class="nav-link" href="/about.html#contact" title="Contact Audrey Franco">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -44,8 +44,8 @@
         😀 Front-end developer, based in Los Angeles, CA, USA
     </h3>
     <div class="navigation-links">
-        <a href="/about.html#contact" class="contact-link">Contact me</a>
-        <a href="/about.html" class="about-link">About me</a>
+        <a href="/about.html#contact" class="contact-link" title="Contact Audrey Franco">Contact me</a>
+        <a href="/about.html" class="about-link" title="About Audrey Franco">About me</a>
     </div>
     <div class="container">
         <div class="row">
